Changelog
=========

3.6.8 (unreleased)
==================

- Nothing changed yet.


3.6.7 (2018-02-01)
==================

- Fix wrong check for available gates and slots when there are multiple gates
  for a single resource. This avoid duplicate bookings on the same slot.
  [cekk]

- Update Date metadata when moving a booking in the same day.
  [cekk]


3.6.6 (2017-05-31)
==================

- Fixed css for booking table overflow. [daniele]


3.6.5 (2017-05-30)
==================

- Added new field to set the number of days before allowing booking. Fixed behavior when moving bookings. [daniele]


3.6.4 (2016-06-24)
==================

- Moving bookings now follows the same restrictions of newly created bookings:
  they can't be moved to holidays and they can't be moved in the past.
  [pnicolli]


3.6.3 (2016-05-23)
==================

- Fixed search link height and width according to the border-box model [pnicolli]


3.6.2 (2016-05-13)
==================

- Switching to "border-box" model for week table [pnicolli]


3.6.1 (2016-03-15)
==================

- Applying localization for jWuery.dateinput
  at document ready is too late
  [ale-rt]


3.6.0 (2016-03-15)
==================

New:

  - Updated requirements:

    - Products.DataGridField >= 1.9.0

  - Support recent versions of collective.fontawesome

Fix:

  - Surround with quotes a jQuery selector to avoid errors
    [ale-rt]

3.5.3 (2014-09-29)
==================

- Fix encoding problem in prenotazione_print view
  [ale-rt]


3.5.2 (2014-09-12)
==================

- Fix prenotazione_move view broken after 3.5.1 release
  [ale-rt]


3.5.1 (2014-09-11)
==================

- Look for permission in context_state view
  [ale-rt]


3.5.0 (2014-09-10)
==================

- Added methods to prenotazioni_context_state,
  some of them moved from conflict manager.
- Fix default not set in AT Prenotazione schema
- Moved some properties from week view to the most accurate
  prenotazioni_context_state