@@ -13,23 +13,23 @@ from rg.prenotazioni.utilities.urls import urlify
 
 
 def hm2handm(hm):
-    ''' This is a utility function that will return the hour and date of day
+    """ This is a utility function that will return the hour and date of day
     to the value passed in the string hm
 
     :param hm: a string in the format "%H%m"
-    '''
+    """
     if (not hm) or (not isinstance(hm, basestring)) or (len(hm) != 4):
         raise ValueError(hm)
     return (hm[:2], hm[2:])
 
 
 def hm2DT(day, hm):
-    ''' This is a utility function that will return the hour and date of day
+    """ This is a utility function that will return the hour and date of day
     to the value passed in the string hm
 
     :param day: a datetime date
     :param hm: a string in the format "%H%m"
-    '''
+    """
     if not hm:
         return None
     date = day.strftime("%Y/%m/%d")
@@ -39,11 +39,11 @@ def hm2DT(day, hm):
 
 
 def hm2seconds(hm):
-    ''' This is a utility function that will return
+    """ This is a utility function that will return
     to the value passed in the string hm
 
     :param hm: a string in the format "%H%m"
-    '''
+    """
     if not hm:
         return None
     h, m = hm2handm(hm)
@@ -52,9 +52,9 @@ def hm2seconds(hm):
 
 class PrenotazioniContextState(BrowserView):
 
-    '''
+    """
     This is a view to for checking prenotazioni context state
-    '''
+    """
     active_review_state = ['published', 'pending']
     add_view = 'prenotazione_add'
     day_type = 'PrenotazioniDay'
@@ -73,30 +73,30 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def is_anonymous(self):
-        '''
+        """
         Return the conflict manager for this context
-        '''
+        """
         return api.user.is_anonymous()
 
     @property
     @memoize
     def user_permissions(self):
-        ''' The dict with the user permissions
-        '''
+        """ The dict with the user permissions
+        """
         return api.user.get_permissions(obj=self.context)
 
     @property
     @memoize
     def user_roles(self):
-        ''' The dict with the user permissions
-        '''
+        """ The dict with the user permissions
+        """
         return api.user.get_roles(obj=self.context)
 
     @property
     @memoize
     def user_can_manage(self):
-        ''' States if the authenticated user can manage this context
-        '''
+        """ States if the authenticated user can manage this context
+        """
         if self.is_anonymous:
             return False
         if self.user_permissions.get('Modify portal content', False):
@@ -106,8 +106,8 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def user_can_view(self):
-        ''' States if the authenticated user can manage this context
-        '''
+        """ States if the authenticated user can manage this context
+        """
         if self.is_anonymous:
             return False
         if self.user_can_manage:
@@ -119,46 +119,46 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def user_can_search(self):
-        ''' States if the user can see the search button
-        '''
+        """ States if the user can see the search button
+        """
         return self.user_can_manage
 
     @property
     @memoize
     def booker(self):
-        '''
+        """
         Return the conflict manager for this context
-        '''
+        """
         return IBooker(self.context.aq_inner)
 
     @property
     @memoize
     def today(self):
-        ''' Cache for today date
-        '''
+        """ Cache for today date
+        """
         return date.today()
 
     @property
     @memoize
     def yesterday(self):
-        ''' Cache for today date
-        '''
+        """ Cache for today date
+        """
         return self.today - timedelta(days=1)
 
     @property
     @memoize
     def tomorrow(self):
-        ''' Cache for today date
-        '''
+        """ Cache for today date
+        """
         return self.today + timedelta(days=1)
 
     @property
     @memoize
     def first_bookable_day(self):
-        ''' The first day when you can book stuff
+        """ The first day when you can book stuff
 
         ;return; a datetime.date object
-        '''
+        """
         return max(
             self.context.getDaData().asdatetime().date(),
             self.tomorrow
@@ -167,10 +167,10 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def last_bookable_day(self):
-        ''' The last day (if set) when you can book stuff
+        """ The last day (if set) when you can book stuff
 
         ;return; a datetime.date object or None
-        '''
+        """
         adata = self.context.getAData()
         if not adata:
             return
@@ -178,9 +178,9 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def is_vacation_day(self, date):
-        '''
+        """
         Check if today is a vacation day
-        '''
+        """
         year = repr(date.year)
         date_it = date.strftime('%d/%m/%Y')
         holidays = self.context.getFestivi()
@@ -228,15 +228,15 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def conflict_manager(self):
-        '''
+        """
         Return the conflict manager for this context
-        '''
+        """
         return IConflictManager(self.context.aq_inner)
 
     @memoize
     def get_state(self, context):
-        ''' Facade to the api get_state method
-        '''
+        """ Facade to the api get_state method
+        """
         if not context:
             return
         return api.content.get_state(context)
@@ -244,8 +244,8 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def remembered_params(self):
-        ''' We want to remember some parameters
-        '''
+        """ We want to remember some parameters
+        """
         params = dict(
             (key, value)
             for key, value in self.request.form.iteritems()
@@ -266,13 +266,13 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def base_booking_url(self):
-        ''' Return the base booking url (no parameters) for this context
-        '''
+        """ Return the base booking url (no parameters) for this context
+        """
         return ('%s/%s' % (self.context.absolute_url(), self.add_view))
 
     def get_booking_urls(self, day, slot, slot_min_size=0):
-        ''' Returns, if possible, the booking urls
-        '''
+        """ Returns, if possible, the booking urls
+        """
         # we have some conditions to check
         if not self.is_valid_day(day):
             return []
@@ -301,8 +301,8 @@ class PrenotazioniContextState(BrowserView):
         return urls
 
     def get_all_booking_urls_by_gate(self, day, slot_min_size=0):
-        ''' Get all the booking urls divided by gate
-        '''
+        """ Get all the booking urls divided by gate
+        """
         slots_by_gate = self.get_free_slots(day)
         urls = {}
         for gate in slots_by_gate:
@@ -314,10 +314,10 @@ class PrenotazioniContextState(BrowserView):
         return urls
 
     def get_all_booking_urls(self, day, slot_min_size=0):
-        ''' Get all the booking urls
+        """ Get all the booking urls
 
         Not divided by gate
-        '''
+        """
         urls_by_gate = self.get_all_booking_urls_by_gate(day, slot_min_size)
         urls = {}
         for gate in urls_by_gate:
@@ -326,8 +326,8 @@ class PrenotazioniContextState(BrowserView):
         return sorted(urls.itervalues(), key=lambda x: x['title'])
 
     def is_slot_busy(self, day, slot):
-        ''' Check if a slot is busy (i.e. the is no free slot overlapping it)
-        '''
+        """ Check if a slot is busy (i.e. the is no free slot overlapping it)
+        """
         free_slots = self.get_free_slots(day)
         for gate in free_slots:
             for free_slot in free_slots[gate]:
@@ -339,8 +339,8 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_anonymous_booking_url(self, day, slot, slot_min_size=0):
-        ''' Returns, the the booking url for an anonymous user
-        '''
+        """ Returns, the the booking url for an anonymous user
+        """
         # First we check if we have booking urls
         all_booking_urls = self.get_all_booking_urls(day, slot_min_size)
         if not all_booking_urls:
@@ -360,52 +360,55 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_gates(self):
-        '''
+        """
         Get's the gates, available and unavailable
-        '''
+        """
         return self.context.getGates() or ['']
 
     @memoize
     def get_unavailable_gates(self):
-        '''
+        """
         Get's the gates declared unavailable
-        '''
+        """
         return self.context.getUnavailable_gates()
 
     @memoize
     def get_available_gates(self):
-        '''
+        """
         Get's the gates declared available
-        '''
+        """
         total = set(self.get_gates())
         unavailable = set(self.get_unavailable_gates())
         return total - unavailable
 
     def get_busy_gates_in_slot(self, booking_date):
-        '''
+        """
         The gates already associated to a Prenotazione object for booking_date
 
         :param booking_date: a DateTime object
-        '''
+        """
         active_review_states = ['published', 'pending']
         brains = self.conflict_manager.unrestricted_prenotazioni(
             Date=booking_date, review_state=active_review_states)
-        return set([x._unrestrictedGetObject().getGate() for x in brains])
+        gates = set([x._unrestrictedGetObject().getGate() for x in brains])
+        # unavailable gates are always busy
+        gates.update(self.get_unavailable_gates())
+        return gates
 
     def get_free_gates_in_slot(self, booking_date):
-        '''
+        """
         The gates not associated to a Prenotazione object for booking_date
 
         :param booking_date: a DateTime object
-        '''
+        """
         available = set(self.get_available_gates())
         busy = set(self.get_busy_gates_in_slot(booking_date))
         return available - busy
 
     @memoize
     def get_day_intervals(self, day):
-        ''' Return the time ranges of this day
-        '''
+        """ Return the time ranges of this day
+        """
         weekday = day.weekday()
         week_table = self.context.getSettimana_tipo()
         day_table = week_table[weekday]
@@ -430,11 +433,11 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def weektable_boundaries(self):
-        ''' Return the boundaries to draw the week table
+        """ Return the boundaries to draw the week table
 
         return a dict_like {'morning': slot1,
                             'afternoon': slot2}
-        '''
+        """
         week_table = self.context.getSettimana_tipo()
         boundaries = {}
         for key in ('inizio_m', 'inizio_p'):
@@ -456,10 +459,10 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def maximum_bookable_date(self):
-        ''' Return the maximum bookable date
+        """ Return the maximum bookable date
 
         return a datetime or None
-        '''
+        """
         future_days = self.context.getFutureDays()
         if not future_days:
             return
@@ -469,10 +472,10 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def minimum_bookable_date(self):
-        ''' Return the minimum bookable date
+        """ Return the minimum bookable date
 
         return a datetime or None
-        '''
+        """
         notbefore_days = self.context.getNotBeforeDays()
         if not notbefore_days:
             return
@@ -480,12 +483,12 @@ class PrenotazioniContextState(BrowserView):
         return date_limit
 
     def get_container(self, booking_date, create_missing=False):
-        ''' Return the container for bookings in this date
+        """ Return the container for bookings in this date
 
         :param booking_date: a date as a string, DateTime or datetime
         :param create_missing: if set to True and the container is missing,
                                create it
-        '''
+        """
         if isinstance(booking_date, basestring):
             booking_date = DateTime(booking_date)
         if not create_missing:
@@ -501,11 +504,11 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_bookings_in_day_folder(self, booking_date):
-        '''
+        """
         The Prenotazione objects for today, unfiltered but sorted by dates
 
         :param booking_date: a date as a datetime or a string
-        '''
+        """
         day_folder = self.get_container(booking_date)
         if not day_folder:
             return []
@@ -518,11 +521,11 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_existing_slots_in_day_folder(self, booking_date):
-        '''
+        """
         The Prenotazione objects for today
 
         :param booking_date: a date as a datetime or a string
-        '''
+        """
         bookings = self.get_bookings_in_day_folder(booking_date)
         return map(ISlot, bookings)
 
@@ -540,7 +543,7 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_busy_slots_in_period(self, booking_date, period='day'):
-        '''
+        """
         The busy slots objects for today: this filters the slots by review
         state
 
@@ -548,7 +551,7 @@ class PrenotazioniContextState(BrowserView):
         :param period: a string
         :return: al list of slots
         [slot1, slot2, slot3]
-        '''
+        """
         if period == 'stormynight':
             return self.get_busy_slots_in_stormynight(booking_date)
         interval = self.get_day_intervals(booking_date)[period]
@@ -564,7 +567,7 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_busy_slots(self, booking_date, period='day'):
-        ''' This will return the busy slots divided by gate:
+        """ This will return the busy slots divided by gate:
 
         :param booking_date: a datetime object
         :param period: a string
@@ -572,7 +575,7 @@ class PrenotazioniContextState(BrowserView):
         {'gate1': [slot1],
          'gate2': [slot2, slot3],
         }
-        '''
+        """
         slots_by_gate = {}
         slots = self.get_busy_slots_in_period(booking_date, period)
         for slot in slots:
@@ -581,7 +584,7 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def get_free_slots(self, booking_date, period='day'):
-        ''' This will return the free slots divided by gate
+        """ This will return the free slots divided by gate
 
         :param booking_date: a datetime object
         :param period: a string
@@ -589,7 +592,7 @@ class PrenotazioniContextState(BrowserView):
         {'gate1': [slot1],
          'gate2': [slot2, slot3],
         }
-        '''
+        """
         day_intervals = self.get_day_intervals(booking_date)
         if period == 'day':
             intervals = [day_intervals['morning'], day_intervals['afternoon']]
@@ -599,15 +602,19 @@ class PrenotazioniContextState(BrowserView):
         gates = self.get_gates()
         availability = {}
         for gate in gates:
-            availability.setdefault(gate, [])
-            gate_slots = slots_by_gate.get(gate, [])
-            for interval in intervals:
-                if interval:
-                    availability[gate].extend(interval - gate_slots)
+            # unavailable gates doesn't have free slots
+            if gate in self.get_unavailable_gates():
+                availability[gate] = []
+            else:
+                availability.setdefault(gate, [])
+                gate_slots = slots_by_gate.get(gate, [])
+                for interval in intervals:
+                    if interval:
+                        availability[gate].extend(interval - gate_slots)
         return availability
 
     def get_freebusy_slots(self, booking_date, period='day'):
-        ''' This will return all the slots (free and busy) divided by gate
+        """ This will return all the slots (free and busy) divided by gate
 
         :param booking_date: a datetime object
         :param period: a string
@@ -615,7 +622,7 @@ class PrenotazioniContextState(BrowserView):
         {'gate1': [slot1],
          'gate2': [slot2, slot3],
         }
-        '''
+        """
         free = self.get_free_slots(booking_date, period)
         busy = self.get_busy_slots(booking_date, period)
         keys = set(free.keys() + busy.keys())
@@ -625,7 +632,7 @@ class PrenotazioniContextState(BrowserView):
         )
 
     def get_anonymous_slots(self, booking_date, period='day'):
-        ''' This will return all the slots under the fake name
+        """ This will return all the slots under the fake name
         anonymous_gate
 
         :param booking_date: a datetime object
@@ -633,7 +640,7 @@ class PrenotazioniContextState(BrowserView):
         :return: a dictionary like:
         {'anonymous_gate': [slot2, slot3],
         }
-        '''
+        """
         interval = self.get_day_intervals(booking_date)[period]
         slots_by_gate = {'anonymous_gate': []}
         if not interval or len(interval) == 0:
@@ -650,22 +657,22 @@ class PrenotazioniContextState(BrowserView):
     @property
     @memoize
     def tipology_durations(self):
-        ''' The durations of all known tipologies
+        """ The durations of all known tipologies
 
         @return a dict like this:
         {'tipology1': 10,
          'tipology2': 20,
          ...
         }
-        '''
+        """
         return dict(
             (x['name'], int(x['duration']))
             for x in self.context.getTipologia()
         )
 
     def get_tipology_duration(self, tipology):
-        ''' Return the seconds for this tipology
-        '''
+        """ Return the seconds for this tipology
+        """
         if isinstance(tipology, unicode):
             tipology = tipology.encode('utf8')
         if isinstance(tipology, dict):
@@ -674,7 +681,7 @@ class PrenotazioniContextState(BrowserView):
 
     @memoize
     def tipologies_bookability(self, booking_date):
-        '''
+        """
         :param  booking_date: a datetime object
 
         Return a dictionary like this:
@@ -683,7 +690,7 @@ class PrenotazioniContextState(BrowserView):
         }
 
         Bookability is calculated from the booking_date and the available slots
-        '''
+        """
         data = {'booking_date': booking_date}
         bookability = {'bookable': [], 'unbookable': []}
         for tipology in self.tipology_durations:
@@ -704,13 +711,13 @@ class PrenotazioniContextState(BrowserView):
         return bool(bookability['bookable'])
 
     def get_first_slot(self, tipology, booking_date, period='day'):
-        '''
+        """
         The Prenotazione objects for today
 
         :param tipology: a dict with name and duration
         :param booking_date: a date as a datetime or a string
         :param period: a DateTime object
-        '''
+        """
         if booking_date < self.first_bookable_date:
             return
         availability = self.get_free_slots(booking_date, period)
@@ -731,9 +738,9 @@ class PrenotazioniContextState(BrowserView):
         return good_slots[0]
 
     def get_less_used_gates(self, booking_date):
-        '''
+        """
         Find which gate is les busy the day of the booking
-        '''
+        """
         availability = self.get_free_slots(booking_date)
         # Create a dictionary where keys is the time the gate is free, and
         # value is a list of gates
@@ -746,6 +753,6 @@ class PrenotazioniContextState(BrowserView):
         return free_time_map[max_free_time]
 
     def __call__(self):
-        ''' Return itself
-        '''
+        """ Return itself
+        """
         return self
